--- a/wp7-donor/Donor/StationsSearchFilter.xaml
+++ b/wp7-donor/Donor/StationsSearchFilter.xaml
@@ -10,8 +10,10 @@
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
+    xmlns:tilteffect="clr-namespace:ControlTiltEffect"   
+    xmlns:telerikCore="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Core"
     xmlns:telerikData="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Data"
-    xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
+    xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"    
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="728" d:DesignWidth="480"
     shell:SystemTray.IsVisible="False" Loaded="PhoneApplicationPage_Loaded_1">
@@ -100,13 +102,14 @@
 		        VerticalAlignment="Top"
 		        Margin="0,0,0,0"
 		        Name="DistrictsList" 
+                telerikCore:InteractionEffectManager.IsInteractionEnabled="True"
                 ItemsSource="{Binding Stations.DistrictItems}"
                 DataContext="{Binding Main, Source={StaticResource Locator}}" 
 		        ItemTap="StationsList_ItemTap"              
                 GroupPickerItemTemplate="{StaticResource GroupPickerTemplate}" 
                 GroupPickerItemTap="StationsList_GroupPickerItemTap" Height="658" GroupHeaderItemTap="DistrictsList_GroupHeaderItemTap">
                 <telerikData:RadJumpList.GroupHeaderTemplate>
-                    <DataTemplate>
+                    <DataTemplate telerikCore:InteractionEffectManager.IsInteractionEnabled="True">
                         <Border Background="#FF006168" Margin="0">
                             <TextBlock Foreground="#FFDFB08B" Margin="5,10" 
                                        FontWeight="Bold"
