--- a/wp7-donor/Donor/StationsSearch.xaml
+++ b/wp7-donor/Donor/StationsSearch.xaml
@@ -21,7 +21,7 @@
     shell:SystemTray.IsVisible="False" Loaded="PhoneApplicationPage_Loaded">
 	<phone:PhoneApplicationPage.Resources>
 		<DataTemplate x:Key="EmptyStationsTemplate">
-			<TextBlock Text="{Binding NoStations, Source={StaticResource Loc}}" 
+			<TextBlock Text="{Binding}" 
                        Foreground="#FF847168" Name="Noresults" TextWrapping="Wrap"
                        Margin="10,5,10,0"/>
 		</DataTemplate>
@@ -102,7 +102,9 @@
             DataContext="{Binding Main, Source={StaticResource Locator}}" 
 		    Tap="StationsList_Tap" ItemTap="StationsList_ItemTap"              
             GroupPickerItemTemplate="{StaticResource GroupPickerTemplate}" 
-            GroupHeaderItemTap="StationsList_GroupHeaderItemTap">
+            GroupHeaderItemTap="StationsList_GroupHeaderItemTap" 
+            EmptyContent="По данному фильтру не найдено станций. Измените параметры поиска" 
+            EmptyContentTemplate="{StaticResource EmptyStationsTemplate}">
                 <telerikData:RadJumpList.GroupHeaderTemplate>
                     <DataTemplate>
                         <Border Background="#FF006168" Margin="0" 
