--- a/wp7-donor/Donor/AchievesPage.xaml
+++ b/wp7-donor/Donor/AchievesPage.xaml
@@ -61,7 +61,9 @@
                     <TextBlock Text="Скоро" Margin="0,20,0,20" Style="{StaticResource Text36pxB9A194}" FontSize="36"/>
                     <ListBox Margin="0,-15,-12,0" Name="SoonBadges"
                      ScrollViewer.VerticalScrollBarVisibility="Disabled"
-                     tilteffect:TiltEffect.IsTiltEnabled="True" Loaded="ListBox_Loaded">
+                     tilteffect:TiltEffect.IsTiltEnabled="True" 
+                             Loaded="ListBox_Loaded"
+                             Tap="AvailableBadges_Tap">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Margin="0,20,0,5" Width="432" Orientation="Horizontal">
