--- a/Donor/view/controller/profile/HSProfileDescriptionViewController.xib
+++ b/Donor/view/controller/profile/HSProfileDescriptionViewController.xib
@@ -605,7 +605,6 @@
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIOpaque">NO</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-												<bool key="IBUIEnabled">NO</bool>
 												<int key="IBUIContentVerticalAlignment">0</int>
 												<double key="IBUITitleEdgeInsets.top">0.0</double>
 												<double key="IBUITitleEdgeInsets.bottom">0.0</double>
@@ -756,7 +755,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="227944980">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="582927547">
@@ -764,6 +763,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 134}</string>
 						<reference key="NSSuperview" ref="227944980"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="442520765"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -778,6 +778,7 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{20, 20}, {290, 40}}</string>
 						<reference key="NSSuperview" ref="227944980"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1009404282"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -800,6 +801,8 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{20, 74}, {290, 40}}</string>
 						<reference key="NSSuperview" ref="227944980"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -815,6 +818,8 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 134}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="582927547"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
